fixed justify and align items

--- a/css/style.css
+++ b/css/style.css
@@ -160,9 +160,11 @@ h2 {
 
 
 .face-thumbnail {
-    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-    vertical-align: middle;
+    width: 20%;
 
     border: 0px;
     border-top: 1px;
@@ -173,7 +175,7 @@ h2 {
 
 .tweeter-card-img {
     
-    width: 100px;
+    width: 75px;
     max-width: 125px;
     height: auto;
     border-radius: 10px;
@@ -184,10 +186,15 @@ h2 {
 }
 
 .tweeter-card-details {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    
     width: 60%;
 
-    padding-left: 10px;
-    padding-top: 10px;
+    
+    padding: 10px;
     
     
     border: 0px;
@@ -198,7 +205,7 @@ h2 {
 
     font-family: 'Catamaran', Arial, Helvetica, sans-serif;
     font-size: 1em;
-    color: rgb(100, 100, 100);
+    color: rgb(65, 65, 65);
 
 
 }
@@ -206,7 +213,7 @@ h2 {
 .tweeter-card-details-div {
     margin-left: 10px;
     margin-top: 2.5px;
-    line-height: 1.25;
+    line-height: 1;
 }
 
 .tweeter-card-details-author {
@@ -218,8 +225,11 @@ h2 {
 .tweeter-card-instagram {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     width: 20%;
+    padding: 10px;
 
     border: 0px;
     border-top: 1px;
@@ -245,7 +255,7 @@ h2 {
 
 .tweeter-card-instagram-follow {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
+    font-size: .75em;
     text-align: center;
 
     padding-right: 5px;
@@ -254,7 +264,11 @@ h2 {
 .tweeter-card-bottom {
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    align-items: left;
 
     padding: 20px;
     font-family: 'Catamaran', Arial, Helvetica, sans-serif;
+
+    line-height: 1.25;
 }
